Type-check ServiceWorker file

--- a/static/.htaccess
+++ b/static/.htaccess
@@ -800,7 +800,7 @@ FileETag None
 # ----------------------------------------------------------------------
 
 <IfModule mod_headers.c>
-    <FilesMatch "service-worker\.js$">
+    <FilesMatch "service-worker(?:\.min)?\.m?js$">
         Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
         Header set Expires "Thu, 1 Jan 1970 00:00:00 GMT"
         Header set Pragma "no-cache"
