--- a/assets/jsconfig.json
+++ b/assets/jsconfig.json
@@ -7,7 +7,7 @@
     "allowJs": true,
     "checkJs": true,
     "noEmit": true,
-    "lib": ["ESNext", "DOM"],
+    "lib": ["ESNext", "DOM", "WebWorker"],
     "module": "ESNext",
     "target": "ESNext",
     "strict": true
