Automerge digest upgrades

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,6 +6,7 @@
     "config:semverAllMonthly",
     ":disableRateLimiting",
     ":noUnscheduledUpdates",
+    ":automergeDigest",
     ":automergeLinters",
     ":automergeTesters",
     ":automergeTypes",
