--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -19,5 +19,11 @@
   "rebaseWhen": "conflicted",
   "git-submodules": {
     "enabled": true
-  }
+  },
+  "packageRules": [
+    {
+      "matchPackageNames": ["tailwindcss"],
+      "allowedVersions": "<4.0.0"
+    }
+  ]
 }
